[project]
name = "water-level-forecasts-data"
version = "0.1.0"
description = "Hourly lead-time-tagged accuracy tracking for CHS's PDU water level forecast vs. our own model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "matplotlib>=3.8",
]
